@@ -16,5 +16,5 @@ remove = AutoPrereqs
 hash_tags = #perl
 
 [Prereqs]
-Apache::Test = 1.32
+Apache::Test = 1.35
 CGI = 3.12
