@@ -1,6 +1,8 @@
 Revision history for Apache::AuthCookie
 
 {{$NEXT}}
+   - remove 3.17's test skip hacks, and bump Apache::Test prerequisite to v1.35
+     which fixes this issue.
 
 3.17  2011-01-19
    - skip the test suite if running as root.  Apache::Test 1.34 fails the test
